[package]
name = "lci-gateway-exporter"
version = "0.2.4"
edition = "2021"
authors = ["Myles Empty Best"]
license = "MIT" # Limited by deps
homepage = "https://github.com/TheEmpty/lci-gateway-exporter"
repository = "https://github.com/TheEmpty/lci-gateway-exporter"

[dependencies]
lci-gateway = "0.8.0"
# lci-gateway = { path = "../lci-gateway" }
env_logger = "0.8.4"
tokio = { version = "1.20.1", features = ["full"] }
async-std = "1.12.0"
log = "0.4.0"
futures = "0.3.23"
